# countYourSelf

./: CMakeLists.txt  database.txt  gewicht.txt  main.c
header/: datastructures.h  free.h  habits.h  list.h  money.h  save.h  showCurrent.h  timeStructure.h  tools.h
source/: day.c  free.c  habits.c  list.c  mainMenue.c  money.c  save.c  showCurrent.c  timeStructure.c  tools.c
